--- a/src/res/images/images.qrc
+++ b/src/res/images/images.qrc
@@ -1,27 +1,18 @@
 <RCC>
     <qresource prefix="/images">
-        <file>Bigger_Black.png</file>
-        <file>Bigger_White.png</file>
-        <file>Bold_Black.png</file>
-        <file>Bold_White.png</file>
-        <file>Check.png</file>
-        <file>Color.png</file>
-        <file>Font_Black.png</file>
-        <file>Font_White.png</file>
-        <file>Smaller_Black.png</file>
-        <file>Smaller_White.png</file>
-        <file>About.png</file>
+        <file>about.png</file>
+        <file>appicon.png</file>
         <file>check.png</file>
+        <file>color.png</file>
         <file>cyclic.gif</file>
-        <file>Down_Black.png</file>
-        <file>Down_White.png</file>
-        <file>How.png</file>
+        <file>down_black.png</file>
+        <file>down_white.png</file>
+        <file>how.png</file>
         <file>loading.gif</file>
         <file>settings.png</file>
-        <file>Sidebar.png</file>
+        <file>sidebar.png</file>
         <file>splash.png</file>
-        <file>Up_Black.png</file>
-        <file>Up_White.png</file>
-        <file>vSongBook.png</file>
+        <file>up_black.png</file>
+        <file>up_white.png</file>
     </qresource>
 </RCC>
