--- a/src/views/home_window.ui
+++ b/src/views/home_window.ui
@@ -53,55 +53,104 @@
       <widget class="QWidget" name="verticalLayoutWidget_3">
        <layout class="QVBoxLayout" name="layoutLeft">
         <item>
-         <widget class="QLineEdit" name="txtSearch">
-          <property name="minimumSize">
-           <size>
-            <width>400</width>
-            <height>0</height>
-           </size>
-          </property>
+         <widget class="QTabWidget" name="tabLeft">
           <property name="font">
            <font>
             <family>Trebuchet MS</family>
             <pointsize>12</pointsize>
            </font>
           </property>
-          <property name="placeholderText">
-           <string>Search a Song</string>
+          <property name="tabShape">
+           <enum>QTabWidget::Triangular</enum>
           </property>
-          <property name="clearButtonEnabled">
-           <bool>true</bool>
+          <property name="currentIndex">
+           <number>0</number>
           </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="cmbSongbooks">
-          <property name="font">
-           <font>
-            <family>Trebuchet MS</family>
-            <pointsize>12</pointsize>
-           </font>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QCheckBox" name="chkSearchCriteria">
-          <property name="text">
-           <string>Search All Song Books</string>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QListView" name="lstResults">
-          <property name="font">
-           <font>
-            <family>Trebuchet MS</family>
-            <pointsize>12</pointsize>
-           </font>
-          </property>
+          <widget class="QWidget" name="tabSearch">
+           <attribute name="title">
+            <string>Search</string>
+           </attribute>
+           <layout class="QVBoxLayout" name="tabSearchLayout">
+            <property name="spacing">
+             <number>5</number>
+            </property>
+            <property name="leftMargin">
+             <number>5</number>
+            </property>
+            <property name="topMargin">
+             <number>5</number>
+            </property>
+            <property name="rightMargin">
+             <number>5</number>
+            </property>
+            <property name="bottomMargin">
+             <number>5</number>
+            </property>
+            <item>
+             <widget class="QLineEdit" name="txtSearch">
+              <property name="minimumSize">
+               <size>
+                <width>400</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="font">
+               <font>
+                <family>Trebuchet MS</family>
+                <pointsize>12</pointsize>
+               </font>
+              </property>
+              <property name="placeholderText">
+               <string>Search a Song</string>
+              </property>
+              <property name="clearButtonEnabled">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QComboBox" name="cmbSongbooks">
+              <property name="font">
+               <font>
+                <family>Trebuchet MS</family>
+                <pointsize>12</pointsize>
+               </font>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="chkSearchCriteria">
+              <property name="text">
+               <string>Search All Song Books</string>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QListView" name="lstResults">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="font">
+               <font>
+                <family>Trebuchet MS</family>
+                <pointsize>12</pointsize>
+               </font>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+          <widget class="QWidget" name="tabHistory">
+           <attribute name="title">
+            <string>History</string>
+           </attribute>
+          </widget>
          </widget>
         </item>
        </layout>
@@ -199,7 +248,7 @@
      <x>0</x>
      <y>0</y>
      <width>1073</width>
-     <height>24</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
