--- a/src/views/home_window.ui
+++ b/src/views/home_window.ui
@@ -19,7 +19,7 @@
    <string>vSongBook for Desktop</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../res/icons/icons.qrc">
+   <iconset>
     <normaloff>:/icons/appicon.ico</normaloff>:/icons/appicon.ico</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -52,8 +52,17 @@
       </property>
       <widget class="QWidget" name="verticalLayoutWidget_3">
        <layout class="QVBoxLayout" name="layoutLeft">
+        <property name="spacing">
+         <number>0</number>
+        </property>
         <item>
          <widget class="QTabWidget" name="tabLeft">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="font">
            <font>
             <family>Trebuchet MS</family>
@@ -61,7 +70,7 @@
            </font>
           </property>
           <property name="tabShape">
-           <enum>QTabWidget::Triangular</enum>
+           <enum>QTabWidget::Rounded</enum>
           </property>
           <property name="currentIndex">
            <number>0</number>
@@ -101,7 +110,7 @@
                </font>
               </property>
               <property name="placeholderText">
-               <string>Search a Song</string>
+               <string>Search for a Song</string>
               </property>
               <property name="clearButtonEnabled">
                <bool>true</bool>
@@ -113,13 +122,21 @@
               <property name="font">
                <font>
                 <family>Trebuchet MS</family>
-                <pointsize>12</pointsize>
+                <pointsize>20</pointsize>
                </font>
               </property>
              </widget>
             </item>
             <item>
              <widget class="QCheckBox" name="chkSearchCriteria">
+              <property name="font">
+               <font>
+                <family>Trebuchet MS</family>
+                <pointsize>12</pointsize>
+                <weight>50</weight>
+                <bold>false</bold>
+               </font>
+              </property>
               <property name="text">
                <string>Search All Song Books</string>
               </property>
@@ -157,6 +174,9 @@
       </widget>
       <widget class="QWidget" name="verticalLayoutWidget_4">
        <layout class="QVBoxLayout" name="layoutRight">
+        <property name="spacing">
+         <number>0</number>
+        </property>
         <item>
          <widget class="QToolBar" name="toolBar">
           <property name="windowTitle">
@@ -177,6 +197,8 @@
           <addaction name="toolbarBold"/>
           <addaction name="separator"/>
           <addaction name="toolbarSettings"/>
+          <addaction name="separator"/>
+          <addaction name="actionDarkMode"/>
          </widget>
         </item>
         <item>
@@ -279,6 +301,10 @@
      <string>Settings</string>
     </property>
     <addaction name="menuManageSettings"/>
+    <addaction name="separator"/>
+    <addaction name="menuDarkMode"/>
+    <addaction name="menuSearchAll"/>
+    <addaction name="separator"/>
     <addaction name="menuResetSettings"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
@@ -387,7 +413,7 @@
     <string>PREVIOUS</string>
    </property>
    <property name="shortcut">
-    <string>Left</string>
+    <string>Up</string>
    </property>
   </action>
   <action name="toolbarNext">
@@ -395,7 +421,7 @@
     <string>NEXT</string>
    </property>
    <property name="shortcut">
-    <string>Right</string>
+    <string>Down</string>
    </property>
   </action>
   <action name="toolbarBigger">
@@ -415,6 +441,9 @@
    </property>
   </action>
   <action name="toolbarBold">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>BOLD</string>
    </property>
@@ -427,9 +456,37 @@
     <string>SETTINGS</string>
    </property>
   </action>
+  <action name="actionDarkMode">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>DARK MODE</string>
+   </property>
+  </action>
+  <action name="menuDarkMode">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Dark Mode</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+D</string>
+   </property>
+  </action>
+  <action name="menuSearchAll">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Search All Song Books</string>
+   </property>
+   <property name="toolTip">
+    <string>Search All Song Books</string>
+   </property>
+  </action>
  </widget>
- <resources>
-  <include location="../res/icons/icons.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
