added ico on the build and fixed missing references

--- a/src/ui/home_window.ui
+++ b/src/ui/home_window.ui
@@ -159,6 +159,9 @@
                 <pointsize>12</pointsize>
                </font>
               </property>
+              <property name="horizontalScrollBarPolicy">
+               <enum>Qt::ScrollBarAlwaysOn</enum>
+              </property>
              </widget>
             </item>
            </layout>
